Update 001. enviroment setup

--- a/001.-enviroment-setup.md
+++ b/001.-enviroment-setup.md
@@ -3,7 +3,12 @@
 npm install -g typescript ts-node
 ```
 
-### compile
+### compile and execute
 ```
 ts index.ts
+node index.js 
+
+- OR -
+
+ts-node index.ts
 ```
