Update 004. type inference

--- a/004.-type-inference.md
+++ b/004.-type-inference.md
@@ -4,6 +4,25 @@ let apples = 5; // apples is number
 ```
 
 ### When to use type annotations
- - when we declear a variable on one line then initialize it later
- - when we want a variable to have a type that can't be inferred
+ - when we declare a variable on one line then initialize it later
+ - when we want a variable to have a type that can't be inferred correctly
  - when a function returns the 'any' type and we need to clarify the value
+
+### when a function returns the 'any' type and we need to clarify the value
+```
+const json = '{"x":10,"y":20}';
+const coordinates: { x: number; y: number } = JSON.parse(json);
+```
+
+### when we want a variable to have a type that can't be inferred correctly
+```
+// !!! BAD CODE EXAMPLE !!!
+let numbers = [-10, -1, 12];
+let numberAboveZero: boolean | number = false;
+
+for (let i = 0; i < numbers.length; ++i) {
+    if (numbers[i] > 0) {
+        numberAboveZero = numbers[i];
+    }
+}
+```
