Update 001. enviroment setup

--- a/001.-enviroment-setup.md
+++ b/001.-enviroment-setup.md
@@ -16,5 +16,5 @@ ts-node index.ts
 ### parcel-bundler
   - npm install -g parcel-bundler
   - tool to help us run typescript in the browser
-  - make index.html with index.ts
+  - make html with scripts of ts
   - parcel index.html
