--- a/012.-module.md
+++ b/012.-module.md
@@ -6,3 +6,8 @@
 
 ### import module
   - import faker from 'faker';
+
+### export and import
+  - export class User { ...
+  - import { User } from './User';
+  - It is not recommended to use default export
