Update 001. enviroment setup

--- a/001.-enviroment-setup.md
+++ b/001.-enviroment-setup.md
@@ -1,6 +1,6 @@
 ### install packages
 ```
-npm install -g typescript ts-node
+npm install -g typescript
 ```
 
 ### compile and execute
@@ -8,13 +8,13 @@ npm install -g typescript ts-node
 ts index.ts
 node index.js 
 
-- OR -
-
-ts-node index.ts
-```
+### ts-node
+  - tsc + node
+  - npm install -g ts-node
+  - ts-node index.ts
 
 ### parcel-bundler
-  - npm install -g parcel-bundler
   - tool to help us run typescript in the browser
+  - npm install -g parcel-bundler
   - make html with scripts of ts
   - parcel index.html
