Update 001. enviroment setup

--- a/001.-enviroment-setup.md
+++ b/001.-enviroment-setup.md
@@ -1,12 +1,9 @@
 ### install packages
-```
-npm install -g typescript
-```
+  - npm install -g typescript
 
 ### compile and execute
-```
-ts index.ts
-node index.js 
+  - ts index.ts
+  - node index.js 
 
 ### ts-node
   - tsc + node
