Update 009. interface creates a new type, type creates a alias

--- a/009.-interface-creates-a-new-type,-type-creates-a-alias.md
+++ b/009.-interface-creates-a-new-type,-type-creates-a-alias.md
@@ -75,3 +75,20 @@ const printSummary = (item: Reportable): void => {
 printSummary(oldCivi);
 printSummary(drink);
 ```
+
+### implements interface
+# !!! implements IS NOT MANDATORY !!!
+  - export interface
+```
+export interface Mappable {
+   ...
+};
+```
+  - implements interface
+```
+import { Mappable } from './Mappable';
+
+export class User implements Mappable {
+   ...
+};
+```
