--- a/011.-classes.md
+++ b/011.-classes.md
@@ -37,3 +37,16 @@ class Car extends Vehicle {
   ...
 }
 ```
+
+### abstract class
+```
+export abstract class Sorter {
+  abstract compare(leftIndex: number, rightIndex: number): boolean;
+  abstract swap(leftIndex: number, rightIndex: number): void;
+  abstract length: number; // getter
+
+  sort(): void {
+    ...
+  }
+};
+```
