Update 009. interface creates a new type, type creates a alias

--- a/009.-interface.md
+++ b/009.-interface.md
@@ -1,3 +1,5 @@
+# interface creates a new type, type creates a alias
+
 ### basic example
 ```
 interface Vehicle {
@@ -92,3 +94,6 @@ export class User implements Mappable {
    ...
 };
 ```
+
+# type
+  - type MatchDate = [Date, string, string, number, number, MatchResult, string];
