--- a/009.-interface.md
+++ b/009.-interface.md
@@ -1,4 +1,4 @@
-# interface creates a new type, type creates a alias
+# *interface creates a new type, type creates a alias*
 
 ### basic example
 ```
