--- a/011.-classes.md
+++ b/011.-classes.md
@@ -50,3 +50,13 @@ export abstract class Sorter {
   }
 };
 ```
+
+### static methods
+```
+class class Summary {
+  static winsAnalysisAndHtmlReport() {
+    ...
+  }
+  ...
+}
+```
