--- a/016.-generics.md
+++ b/016.-generics.md
@@ -7,3 +7,14 @@ class HoldAnything<T> {
 const holdNumber = new HoldAnything<number>(0);
 const holdString = new HoldAnything<string>('abc');
 ```
+
+### constraints by interface
+```
+interface Printable {
+  print(): void;
+}
+
+function printHouseOrCar<T extends Printable>(arr: T[]): void {
+  ...
+}
+```
