--- a/009.-interface.md
+++ b/009.-interface.md
@@ -95,5 +95,13 @@ export class User implements Mappable {
 };
 ```
 
+### optional property
+```
+interface UserProps {
+  name?: string,
+  age?: number
+};
+```
+
 # type
   - type MatchDate = [Date, string, string, number, number, MatchResult, string];
