--- a/005.-functions.md
+++ b/005.-functions.md
@@ -47,4 +47,7 @@ const logWeather = ({ date, weather }: { date: Date; weather: string }): void =>
 
 ```
 
-
+### type alias for funciton
+```
+type Callback = () => void;
+```
