--- a/006.-objects.md
+++ b/006.-objects.md
@@ -18,3 +18,8 @@ const profile = {
 const { age }: { age: number } = profile;
 const { coords: { lat, lng} }: { coords: { lat: number; lng: number } }  = profile;
 ```
+
+### object for unknown key
+```
+  events: { [key: string]: Callback[] } = {};
+```
