--- a/016.-generics.md
+++ b/016.-generics.md
@@ -18,3 +18,24 @@ function printHouseOrCar<T extends Printable>(arr: T[]): void {
   ...
 }
 ```
+
+### keyof
+```
+class Attributes<T> {
+  constructor(private data: T) {}
+
+  get(key: string): number | string | boolean {
+     return this.data[key];
+  }
+}
+
+===>
+
+class Attributes<T> {
+  constructor(private data: T) {}
+
+  get<K extends keyof T>(key: K): T[K] {
+     return this.data[key];
+  }
+}
+```
