--- a/016.-generics.md
+++ b/016.-generics.md
@@ -19,7 +19,7 @@ function printHouseOrCar<T extends Printable>(arr: T[]): void {
 }
 ```
 
-### keyof
+### union to keyof for type of field of object
 ```
 class Attributes<T> {
   constructor(private data: T) {}
