--- a/009.-interface.md
+++ b/009.-interface.md
@@ -103,5 +103,23 @@ interface UserProps {
 };
 ```
 
+### extends interface
+```
+interface Base {
+    name: string;
+}
+
+interface Extened {
+    age: number;
+}
+
+interface Base extends Extened {}
+
+const b: Base = {
+    name: "aaa",
+    age: 111
+};
+```
+
 # type
   - type MatchDate = [Date, string, string, number, number, MatchResult, string];
