--- a/009.-interface.md
+++ b/009.-interface.md
@@ -109,13 +109,21 @@ interface Base {
     name: string;
 }
 
-interface Extened {
+// ================================ Option 1
+interface Extended extends Base {
     age: number;
 }
 
-interface Base extends Extened {}
+// ================================ Option 2
+interface Extended  {
+    age: number;
+}
 
-const b: Base = {
+interface Extended extends Base {}
+
+// end of options =================
+
+const b: Extended = {
     name: "aaa",
     age: 111
 };
