--- a/019.-decorators-basic.md
+++ b/019.-decorators-basic.md
@@ -1,5 +1,5 @@
 ### definition
-  - Functions that can be used to modify/change/anything deferenct properties/methods in the class
+  - Functions that can be used to modify/change/anything different properties/methods in the class
   - Used inside/on classes only
   - Understanding the order in which decorators are ran are the key to understanding them
   - Experimental!
@@ -8,8 +8,7 @@
   - "experimentalDecorators": true
   - "emitDecoratorMetadata": true
 
-### decorator function
-  - decorators on a propery, method, accessor
+### method decorator
   - first argument is the prototype of the object
   - second argument is the key of the property/method/access on the object
   - third argument is the property descriptor
