Update 019. decorators basic

--- a/019.-decorators-basic.md
+++ b/019.-decorators-basic.md
@@ -1,5 +1,5 @@
 ### definition
-  - Functions that can be used to modify/change/anything different properties/methods in the class
+  - Functions that can be used to modify/change/anything different properties/methods/accessors in the class
   - Used inside/on classes only
   - Understanding the order in which decorators are ran are the key to understanding them
   - Experimental!
