Update 019. decorators basic

--- a/019.-decorators-basic.md
+++ b/019.-decorators-basic.md
@@ -12,7 +12,7 @@
   - first argument is the prototype of the object
   - second argument is the key of the property/method/access on the object
   - third argument is the property descriptor
-  - decorators are applied when the code for this class is ran (**not when an instance is created**)
+  - decorators run only one time when define class (**not when an instance is created**)
 ```
 class Boat {
     color: string = "red";
