Update 019. decorators basic

--- a/019.-decorators-basic.md
+++ b/019.-decorators-basic.md
@@ -133,6 +133,7 @@ function parameterDecorator(target: any, key: string, index: number) {
 ```
 
 ### class decorator
+  - runs last
 ```
 @classDecorator
 class Boat {
