Update 021. metadata with decorators

--- a/021.-metadata-with-decorators.md
+++ b/021.-metadata-with-decorators.md
@@ -64,3 +64,19 @@ function printMetadata(target: Function) {
     }
 }
 ```
+
+### constraint decoratable methods with PropertyDescriptor
+```
+interface RouteHandlerDescriptor extends PropertyDescriptor {
+    value?: RequestHandler;
+}
+
+function get(path: string) {
+    return function(target: any, key: any, desc: RouteHandlerDescriptor) {
+        ....
+    };
+}
+
+@get('/')
+add(a: number): number { // This will not work
+```
