Update 030. express with TypeScript

--- a/030.-express-with-TypeScript.md
+++ b/030.-express-with-TypeScript.md
@@ -4,3 +4,24 @@
 
 ### A TypeScript Framework on top of Express
   - ts-express-decorators (https://www.npmjs.com/package/ts-express-decorators)
+
+### add member in Request
+ - typeRoots in tsconfig.json
+```
+        "typeRoots": [
+            "./node_modules/@types",
+            "./src/customTypes"
+        ],
+```
+  - src/customTypes/express.d.ts
+```
+export {};
+
+declare global {
+    namespace Express {
+        interface Request {
+            customUser: any;
+        }
+    }
+}
+```
