Update 001. enviroment setup

--- a/001.-enviroment-setup.md
+++ b/001.-enviroment-setup.md
@@ -15,3 +15,34 @@
   - npm install -g parcel-bundler
   - make html with scripts of ts
   - parcel index.html
+
+### directory structure
+```
+project
+├─build : for javascript outputs
+└─src   : for typescript inputs
+```
+
+### generate tsconfig.json
+  - tsc --init
+
+### edit tsconfig.json
+  - "outDir": "./build"
+  - "rootDir": "./src"
+
+### compile source
+  - tsc
+  - tsc -w
+    - with watch
+
+### compile and run with concurrently
+  - npm install -g concurrently nodemon
+  - edit scripts in package.json
+```
+  "scripts": {
+    "start:build": "tsc -w",
+    "start:run": "nodemon build/index.js",
+    "start": "concurrently npm:start:*"
+  },
+```
+  - npm start
