Update 030. express with TypeScript

--- a/030.-express-with-TypeScript.md
+++ b/030.-express-with-TypeScript.md
@@ -25,3 +25,20 @@ declare global {
     }
 }
 ```
+
+### RequestHandler
+```
+export const getTodos: RequestHandler = (req, res, next) => {
+   ...
+}
+```
+
+### RequestHandler of path parameters
+```
+app.use('/:id', updateTodo);
+
+export const updateTodo: RequestHandler<{ id: string }> = (req, res, next) => {
+   const todoId = req.params.id;
+   ...
+}
+```
