Update 030. express with TypeScript

--- a/030.-express-with-TypeScript.md
+++ b/030.-express-with-TypeScript.md
@@ -33,7 +33,7 @@ export const getTodos: RequestHandler = (req, res, next) => {
 }
 ```
 
-### RequestHandler of path parameters
+### RequestHandler with path parameters
 ```
 app.use('/:id', updateTodo);
 
