Update 030. express with TypeScript

--- a/030.-express-with-TypeScript.md
+++ b/030.-express-with-TypeScript.md
@@ -26,6 +26,34 @@ declare global {
 }
 ```
 
+### Error Handler
+```
+import express, { Request, Response, NextFunction } from 'express';
+
+app.use( ... ) // middleware
+app.use( ... ) // router
+
+app.use((err: Error, req: Request, res: Response, next: NextFunction) => {
+  res.status(500).json({ message: err.message });
+});
+```
+
+### Router
+- define
+```
+import { Router } from 'express';
+
+const router = Router();
+
+export default router;
+```
+- use
+```
+import todoRoutes from './routes/todos';
+
+app.use('/todos', todoRoutes);
+```
+
 ### RequestHandler
 ```
 export const getTodos: RequestHandler = (req, res, next) => {
